tests/suites/scctests/cc/error/0012-ifnoexpr.c
/*
PATTERN:
0012-ifnoexpr.c:8: error: unexpected '
'
.
*/

#if
#endif

